<resources>
    <!--    app-->
    <string name="app_name">VaANH</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    Auth-->
    <string name="label_username_hint">Enter your account</string>
    <string name="label_password_hint">Enter your password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="label_save_user">Save user</string>
    <string name="dont_have_account">Don"'"t have account? Sign Up</string>
    <string name="have_account">Have account? Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_with_gg">LoginWithGoogle</string>
    <string name="login_with_fb">Login with facebook</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login_failed">Username or password is invalid!</string>
    <string name="phone_or_email">Phone number/Email address</string>
    <!--    -->
    <string name="label_home">Home</string>
    <string name="label_cart">Cart</string>
    <string name="label_account">Account</string>
    <string name="label_notification">Notification</string>
    <string name="label_message">Message</string>
    <string name="label_chat">Chat</string>

    <!--    profile-->
    <string name="phone_number">Phone number</string>
    <string name="full_name">Full name</string>
    <string name="dob">Date of Birth</string>
    <string name="view_profile">View profile</string>
    <string name="update_profile">Update profile</string>

    <!---->
    <string name="gender">Gender</string>
    <!--    -->
    <string name="blink">BLINK</string>
    <string name="clockwise">ROTATE</string>
    <string name="fade">FADE</string>
    <string name="move">MOVE</string>
    <string name="slide">SLIDE</string>
    <string name="zoom">ZOOM</string>
    <string name="stop_animation">STOP ANIMATION</string>
    <string name="course_rating">Course Rating</string>
    <string name="course_name">Course Name</string>
    <!--    -->
    <string name="colon">:</string>
    <string name="run">Run</string>
    <string name="hint_search">Enter to search</string>
    <string name="kafka">Kafka</string>
    <string name="label_for_you">For you</string>
    <string name="label_see_all">See all</string>
    <string name="label_product_price">%sVnđ</string>
    <string name="label_products">Products:</string>
    <string name="label_ratings">Ratings:</string>
    <string name="label_response_rate">Response Rate:</string>

    <!--    -->
    <string name="example_product_name">wo nai shi guang huan yu wei yi ao miao, gai shi jie di yi sang hou</string>
    <string name="example_price">1.000.0000 Vnđ</string>
    <string name="example_quantity_sold">2,5k</string>
    <string name="label_view_shop">View Shop</string>
    <string name="example_address">Minato, Chuo City, Tokyo</string>
    <string name="example_brand">Delutsion</string>
    <string name="status_online">Online</string>
    <string name="label_from_same_shop">From the same shop</string>
    <string name="label_product_specifications">Product Specifications</string>
    <string name="label_chat_now">Chat now</string>
    <string name="label_add_to_cart">Add to Cart</string>
    <string name="by_by_with_voucher">Buy with Voucher</string>
    <string name="label_product_description">Product Description</string>
    <string name="label_product_ratings">Product Ratings</string>
    <string name="label_sold">99 Sold</string>
    <string name="label_check_out">Check out</string>
    <string name="label_select_all">Select all</string>
    <string name="label_total">Total(%d item):</string>
    <string name="label_dashboard">Dash board</string>
</resources>