<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fragment_home"
        android:icon="@drawable/ic_home"
        android:title="@string/label_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/fragment_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/label_cart"
        app:showAsAction="always" />
    <item
        android:id="@+id/fragment_notification"
        android:icon="@drawable/ic_notifications"
        android:title="@string/label_notification"
        app:showAsAction="always" />
    <item
        android:id="@+id/fragment_dashboard"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/label_dashboard"
        app:showAsAction="always" />
    <item
        android:id="@+id/fragment_user_profile"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/label_account"
        app:showAsAction="always" />
</menu>