<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userProfile"
            type="kell.com.example.vaanh.model.UserProfile" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{userProfile.fullName}"
            android:layout_marginVertical="@dimen/space_medium"
            android:paddingVertical="@dimen/space_small"
            tools:text="@string/full_name" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/space_medium"
            android:paddingVertical="@dimen/space_small"
            tools:text="@string/dob" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{userProfile.phoneNumber}"
            android:layout_marginVertical="@dimen/space_medium"
            android:paddingVertical="@dimen/space_small"
            tools:text="@string/phone_number" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_large"
            tools:src="@drawable/icons8_facebook" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>